[package]
name = "yep_lang"
version = "0.1.0"
edition = "2021"

[dependencies]
ariadne = "0.2.0"
logos = "0.13.0"
nom = { git = "https://github.com/rust-bakery/nom" }
snailquote = "0.3.1"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
enum-as-inner = "0.5.1"
