[package]
name = "yep_lang"
version = "0.1.0"
edition = "2021"

[dependencies]
ariadne = "0.2.0"
chumsky = { git = "https://github.com/TGMM/chumsky/", version = "1.0.0-alpha.3", features = ["label", "sync"] }
logos = "0.13.0"
snailquote = "0.3.1"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
enum-as-inner = "0.5.1"
